// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ledger Generation > Conversion > should generate ledger records for basic conversion charge 1`] = `
{
  "records": [
    {
      "creditAccount1": {
        "name": "Foreign Business 2",
      },
      "creditAccount2": null,
      "creditAmount1": {
        "formatted": "€ 100,000.00",
      },
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Account ID:...1",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "€ 100,000.00",
      },
      "debitAmount2": null,
      "description": "Description for transaction 4200a",
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 200,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 200,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
    {
      "creditAccount1": {
        "name": "Account ID:...1",
      },
      "creditAccount2": null,
      "creditAmount1": null,
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Foreign Business 1",
      },
      "debitAccount2": null,
      "debitAmount1": null,
      "debitAmount2": null,
      "description": "Description for transaction 4200b",
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 200,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 200,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`Ledger Generation > Conversion > should generate ledger records for conversion charge with dates diff 1`] = `
{
  "records": [
    {
      "creditAccount1": {
        "name": "Foreign Business 2",
      },
      "creditAccount2": null,
      "creditAmount1": {
        "formatted": "€ 100,000.00",
      },
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Account ID:...1",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "€ 100,000.00",
      },
      "debitAmount2": null,
      "description": "Description for transaction 4202a",
      "invoiceDate": 2020-01-02T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 250,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 250,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-02T00:00:00.000Z,
    },
    {
      "creditAccount1": {
        "name": "Account ID:...1",
      },
      "creditAccount2": null,
      "creditAmount1": null,
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Foreign Business 1",
      },
      "debitAccount2": null,
      "debitAmount1": null,
      "debitAmount2": null,
      "description": "Description for transaction 4202b",
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 250,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 250,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`Ledger Generation > Foreign currency > Should handle no-invoice businesses 1`] = `
{
  "records": [
    {
      "creditAccount1": {
        "name": "Account ID:...1",
      },
      "creditAccount2": null,
      "creditAmount1": {
        "formatted": "$ 100,000.00",
      },
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Foreign Business 2",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "$ 100,000.00",
      },
      "debitAmount2": null,
      "description": "Description for transaction 4105",
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "2",
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`Ledger Generation > Foreign currency > should generate ledger records for basic USD charge 1`] = `
{
  "records": [
    {
      "creditAccount1": {
        "name": "Foreign Business 1",
      },
      "creditAccount2": null,
      "creditAmount1": {
        "formatted": "$ 100,000.00",
      },
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Tax Category 3",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "$ 100,000.00",
      },
      "debitAmount2": null,
      "description": null,
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": null,
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
    {
      "creditAccount1": {
        "name": "Account ID:...1",
      },
      "creditAccount2": null,
      "creditAmount1": {
        "formatted": "$ 100,000.00",
      },
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Foreign Business 1",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "$ 100,000.00",
      },
      "debitAmount2": null,
      "description": "Description for transaction 4100",
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`Ledger Generation > Foreign currency > should generate ledger records including conversion diff ledger for USD charge with dates diff 1`] = `
{
  "records": [
    {
      "creditAccount1": {
        "name": "Foreign Business 1",
      },
      "creditAccount2": null,
      "creditAmount1": {
        "formatted": "$ 100,000.00",
      },
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Tax Category 3",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "$ 100,000.00",
      },
      "debitAmount2": null,
      "description": null,
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": null,
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
    {
      "creditAccount1": {
        "name": "Account ID:...1",
      },
      "creditAccount2": null,
      "creditAmount1": {
        "formatted": "$ 100,000.00",
      },
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Foreign Business 1",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "$ 100,000.00",
      },
      "debitAmount2": null,
      "description": "Description for transaction 4100",
      "invoiceDate": 2020-01-02T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 150,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 150,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-02T00:00:00.000Z,
    },
    {
      "creditAccount1": {
        "name": "Foreign Business 1",
      },
      "creditAccount2": null,
      "creditAmount1": null,
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Exchange",
      },
      "debitAccount2": null,
      "debitAmount1": null,
      "debitAmount2": null,
      "description": "Exchange ledger record",
      "invoiceDate": 2020-01-02T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 50,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 50,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-02T00:00:00.000Z,
    },
  ],
}
`;

exports[`Ledger Generation > Local currency (ILS) > Should handle no-invoice businesses 1`] = `
{
  "records": [
    {
      "creditAccount1": {
        "name": "Account ID:...1",
      },
      "creditAccount2": null,
      "creditAmount1": null,
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Local Business 2 (no invoices)",
      },
      "debitAccount2": null,
      "debitAmount1": null,
      "debitAmount2": null,
      "description": "Description for transaction 4002",
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 117,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 117,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`Ledger Generation > Misc > should handle currency AND date diff 1`] = `
{
  "records": [
    {
      "creditAccount1": {
        "name": "Tax Category 1",
      },
      "creditAccount2": {
        "name": "VAT [temp]",
      },
      "creditAmount1": {
        "formatted": "$ 83,000.00",
      },
      "creditAmount2": {
        "formatted": "$ 17,000.00",
      },
      "debitAccount1": {
        "name": "Local Business 1",
      },
      "debitAccount2": null,
      "debitAmount1": {
        "formatted": "$ 100,000.00",
      },
      "debitAmount2": null,
      "description": null,
      "invoiceDate": 2020-01-01T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 83,000.00",
      },
      "localCurrencyCreditAmount2": {
        "formatted": "₪ 17,000.00",
      },
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 100,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": null,
      "valueDate": 2020-01-01T00:00:00.000Z,
    },
    {
      "creditAccount1": {
        "name": "Account ID:...1",
      },
      "creditAccount2": null,
      "creditAmount1": null,
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Local Business 1",
      },
      "debitAccount2": null,
      "debitAmount1": null,
      "debitAmount2": null,
      "description": "Description for transaction 4900",
      "invoiceDate": 2020-01-02T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 117,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 117,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-02T00:00:00.000Z,
    },
    {
      "creditAccount1": {
        "name": "Local Business 1",
      },
      "creditAccount2": null,
      "creditAmount1": null,
      "creditAmount2": null,
      "debitAccount1": {
        "name": "Exchange",
      },
      "debitAccount2": null,
      "debitAmount1": null,
      "debitAmount2": null,
      "description": "Exchange ledger record",
      "invoiceDate": 2020-01-02T00:00:00.000Z,
      "localCurrencyCreditAmount1": {
        "formatted": "₪ 217,000.00",
      },
      "localCurrencyCreditAmount2": null,
      "localCurrencyDebitAmount1": {
        "formatted": "₪ 217,000.00",
      },
      "localCurrencyDebitAmount2": null,
      "reference1": "1",
      "valueDate": 2020-01-02T00:00:00.000Z,
    },
  ],
}
`;
